# membran

./: .gitignore  App.tsx  CLAUDE.md  README.md  app.json  index.html  index.js  metro.config.js  metro.config.macos.js  package-lock.json  package.json  react-native.config.js  vite.config.ts
scripts/: setup-macos.sh
src/: App.module.css  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  repo_scanner.rs
src/components/: DashboardView.module.css  DashboardView.tsx  DepPanel.module.css  DepPanel.tsx  DepsView.module.css  DepsView.tsx  ErrorBanner.module.css  ErrorBanner.tsx  FolderSelector.module.css  FolderSelector.tsx  GitHistoryPanel.module.css  GitHistoryPanel.tsx  HealthBar.module.css  HealthBar.tsx  HealthDetailPanel.module.css  HealthDetailPanel.tsx  HealthSummary.module.css  HealthSummary.tsx  HealthView.module.css  HealthView.tsx  LoadingIndicator.module.css  LoadingIndicator.tsx  MfeView.module.css  MfeView.tsx  NestedProjectList.module.css  NestedProjectList.tsx  ProcessCard.module.css  ProcessCard.tsx  RepoCard.module.css  RepoCard.tsx  RepoDetailDrawer.module.css  RepoDetailDrawer.tsx  RepoList.module.css  RepoList.tsx  RunButton.module.css  RunButton.tsx  RunningView.module.css  RunningView.tsx  ScriptsPanel.module.css  ScriptsPanel.tsx  (+4 more)
